Fix tabs widget tabs on small screens
Fixes #226

--- a/assets/forsitethemes/less/ft-widgets.less
+++ b/assets/forsitethemes/less/ft-widgets.less
@@ -91,8 +91,12 @@ FortyTwo custom and WordPress default widget styling.
 
 	.widget-title,
 	.tab-buttons {
-		display: table-cell;
+		display: block;
 		vertical-align: middle;
+
+		@media (min-width: @screen-md-min) {
+			display: table-cell;
+		}
 	}
 
 	.tab-buttons {
